# kit-cat

./: .gitignore  CICD_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.rst  README.md
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
dev-docs/: BINARY_ALIASES_UPDATE.md  DIRECTORY_CHANGE.md  IMPLEMENTATION_STATUS.md  NAMING_FIXES.md  PROJECT_SUMMARY.md  RENAMING_SUMMARY.md
src/: main.rs  utils.rs
src/commands/: branch.rs  checkout.rs  commands.rs  diff.rs  gc.rs  log.rs  merge.rs  mod.rs  status.rs
src/config/: mod.rs
src/diff/: algorithm.rs  format.rs  mod.rs  types.rs
src/index/: add_to_index.rs  mod.rs  read_index.rs  write_index.rs
src/merge/: base.rs  mod.rs  three_way.rs  types.rs
src/models/: mod.rs
src/object/: commit.rs  hash_object.rs  mod.rs  pack.rs  read_object.rs  tree.rs
src/repo/: mod.rs
