[package]
name = "kitcat"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kitcat"
path = "src/main.rs"

[[bin]]
name = "kit-cat"
path = "src/main.rs"

[[bin]]
name = "kc"
path = "src/main.rs"

[[bin]]
name = "kit"
path = "src/main.rs"

[dependencies]
sha1 = "0.10.6"
flate2 = "1.1.5"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
walkdir = "2.4"
ignore = "0.4"
similar = "2.3"
memmap2 = "0.9"
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
hex = "0.4"